--- a/barcodescanview/src/main/AndroidManifest.xml
+++ b/barcodescanview/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tourbillon.barcodescanview">
+    package="com.anbillon.barcodescanview">
 
   <uses-permission android:name="android.permission.CAMERA"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
