--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tourbillon.barcodescanview.sample">
+    package="com.anbillon.barcodescanview.sample">
 
   <application
       android:allowBackup="true"
@@ -8,14 +8,14 @@
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name="com.tourbillon.barcodescanview.sample.MainActivity">
+    <activity android:name="com.anbillon.barcodescanview.sample.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity android:name="com.tourbillon.barcodescanview.sample.CaptureActivity"/>
+    <activity android:name="com.anbillon.barcodescanview.sample.CaptureActivity"/>
 
   </application>
 
