--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,18 @@
-# Project-wide Gradle settings.
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
+VERSION_NAME=1.0.0-SNAPSHOT
+POM_GROUP_ID=com.anbillon.barcode
+POM_NAME=Bar code scan view
+POM_ARTIFACT_ID=barcodescanview
+POM_DESCRIPTION=A convenient bar code scan view library to integrate zxing.
+POM_URL=https://github.com/Tourbillon/Android-BarCodeScanView
+POM_SCM_URL=https://github.com/Tourbillon/Android-BarCodeScanView
+POM_SCM_CONNECTION=scm:git@github.com:Tourbillon/Android-BarCodeScanView.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:Tourbillon/Android-BarCodeScanView.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_PACKAGING=jar
 
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+POM_DEVELOPER_ID=anbillon
+POM_DEVELOPER_NAME=Anbillon Group
+POM_INCEPTION_YEAR=2017
